# grompt

./: Cargo.toml  LICENSE  flake.nix  readme.md
src/: bin.rs  lib.rs  main.rs  options.rs
