[package]
name = "grompt"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
git2 = "0.18.0"
owo-colors = "3.5.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
xdg = "2.5.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true